Project9/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project9
  labels:
    app: project9
