Project9/k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-lb
  namespace: project9
spec:
  selector:
    app: apache
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
