Project9/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-nodeport
  namespace: project9
spec:
  selector:
    app: apache
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    # optional: specify nodePort if you want fixed port; otherwise Kubernetes assigns one
    nodePort: 30080
